seaqt/QtWidgets/gen_qmdiarea.h

typedef struct QBrush QBrush;
typedef struct QChildEvent QChildEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMdiArea QMdiArea;
typedef struct QMdiSubWindow QMdiSubWindow;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QMdiArea* QMdiArea_new(QWidget* parent);
QMdiArea* QMdiArea_new2();
QMetaObject* QMdiArea_metaObject(const QMdiArea* self);
void* QMdiArea_metacast(QMdiArea* self, const char* param1);
int QMdiArea_metacall(QMdiArea* self, int param1, int param2, void** param3);
struct miqt_string QMdiArea_tr(const char* s);
QSize* QMdiArea_sizeHint(const QMdiArea* self);
QSize* QMdiArea_minimumSizeHint(const QMdiArea* self);
QMdiSubWindow* QMdiArea_currentSubWindow(const QMdiArea* self);
QMdiSubWindow* QMdiArea_activeSubWindow(const QMdiArea* self);
struct miqt_array /* of QMdiSubWindow* */  QMdiArea_subWindowList(const QMdiArea* self);
QMdiSubWindow* QMdiArea_addSubWindow(QMdiArea* self, QWidget* widget);
void QMdiArea_removeSubWindow(QMdiArea* self, QWidget* widget);
QBrush* QMdiArea_background(const QMdiArea* self);
void QMdiArea_setBackground(QMdiArea* self, QBrush* background);
int QMdiArea_activationOrder(const QMdiArea* self);
void QMdiArea_setActivationOrder(QMdiArea* self, int order);
void QMdiArea_setOption(QMdiArea* self, int option);
bool QMdiArea_testOption(const QMdiArea* self, int opton);
void QMdiArea_setViewMode(QMdiArea* self, int mode);
int QMdiArea_viewMode(const QMdiArea* self);
bool QMdiArea_documentMode(const QMdiArea* self);
void QMdiArea_setDocumentMode(QMdiArea* self, bool enabled);
void QMdiArea_setTabsClosable(QMdiArea* self, bool closable);
bool QMdiArea_tabsClosable(const QMdiArea* self);
void QMdiArea_setTabsMovable(QMdiArea* self, bool movable);
bool QMdiArea_tabsMovable(const QMdiArea* self);
void QMdiArea_setTabShape(QMdiArea* self, int shape);
int QMdiArea_tabShape(const QMdiArea* self);
void QMdiArea_setTabPosition(QMdiArea* self, int position);
int QMdiArea_tabPosition(const QMdiArea* self);
void QMdiArea_subWindowActivated(QMdiArea* self, QMdiSubWindow* param1);
void QMdiArea_connect_subWindowActivated(QMdiArea* self, intptr_t slot);
void QMdiArea_setActiveSubWindow(QMdiArea* self, QMdiSubWindow* window);
void QMdiArea_tileSubWindows(QMdiArea* self);
void QMdiArea_cascadeSubWindows(QMdiArea* self);
void QMdiArea_closeActiveSubWindow(QMdiArea* self);
void QMdiArea_closeAllSubWindows(QMdiArea* self);
void QMdiArea_activateNextSubWindow(QMdiArea* self);
void QMdiArea_activatePreviousSubWindow(QMdiArea* self);
struct miqt_string QMdiArea_tr2(const char* s, const char* c);
struct miqt_string QMdiArea_tr3(const char* s, const char* c, int n);
struct miqt_array /* of QMdiSubWindow* */  QMdiArea_subWindowList1(const QMdiArea* self, int order);
QMdiSubWindow* QMdiArea_addSubWindow2(QMdiArea* self, QWidget* widget, int flags);
void QMdiArea_setOption2(QMdiArea* self, int option, bool on);
bool QMdiArea_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QMdiArea_virtualbase_metaObject(const void* self);
bool QMdiArea_override_virtual_metacast(void* self, intptr_t slot);
void* QMdiArea_virtualbase_metacast(void* self, const char* param1);
bool QMdiArea_override_virtual_metacall(void* self, intptr_t slot);
int QMdiArea_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QMdiArea_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QMdiArea_virtualbase_sizeHint(const void* self);
bool QMdiArea_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QMdiArea_virtualbase_minimumSizeHint(const void* self);
bool QMdiArea_override_virtual_setupViewport(void* self, intptr_t slot);
void QMdiArea_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QMdiArea_override_virtual_event(void* self, intptr_t slot);
bool QMdiArea_virtualbase_event(void* self, QEvent* event);
bool QMdiArea_override_virtual_eventFilter(void* self, intptr_t slot);
bool QMdiArea_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QMdiArea_override_virtual_paintEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_paintEvent(void* self, QPaintEvent* paintEvent);
bool QMdiArea_override_virtual_childEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_childEvent(void* self, QChildEvent* childEvent);
bool QMdiArea_override_virtual_resizeEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_resizeEvent(void* self, QResizeEvent* resizeEvent);
bool QMdiArea_override_virtual_timerEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_timerEvent(void* self, QTimerEvent* timerEvent);
bool QMdiArea_override_virtual_showEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_showEvent(void* self, QShowEvent* showEvent);
bool QMdiArea_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QMdiArea_virtualbase_viewportEvent(void* self, QEvent* event);
bool QMdiArea_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QMdiArea_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QMdiArea_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_mousePressEvent(void* self, QMouseEvent* param1);
bool QMdiArea_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* param1);
bool QMdiArea_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* param1);
bool QMdiArea_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QMdiArea_override_virtual_wheelEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QMdiArea_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QMdiArea_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* param1);
bool QMdiArea_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* param1);
bool QMdiArea_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* param1);
bool QMdiArea_override_virtual_dropEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_dropEvent(void* self, QDropEvent* param1);
bool QMdiArea_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QMdiArea_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QMdiArea_virtualbase_viewportSizeHint(const void* self);
bool QMdiArea_override_virtual_changeEvent(void* self, intptr_t slot);
void QMdiArea_virtualbase_changeEvent(void* self, QEvent* param1);
bool QMdiArea_override_virtual_initStyleOption(void* self, intptr_t slot);
void QMdiArea_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
int QMdiArea_virtualbase_devType(const void* self);