seaqt/QtWidgets/gen_qmdiarea.nim


proc fcQMdiArea_new(parent: pointer): ptr cQMdiArea {.importc: "QMdiArea_new".}
proc fcQMdiArea_new2(): ptr cQMdiArea {.importc: "QMdiArea_new2".}
proc fcQMdiArea_metaObject(self: pointer, ): pointer {.importc: "QMdiArea_metaObject".}
proc fcQMdiArea_metacast(self: pointer, param1: cstring): pointer {.importc: "QMdiArea_metacast".}
proc fcQMdiArea_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMdiArea_metacall".}
proc fcQMdiArea_tr(s: cstring): struct_miqt_string {.importc: "QMdiArea_tr".}
proc fcQMdiArea_sizeHint(self: pointer, ): pointer {.importc: "QMdiArea_sizeHint".}
proc fcQMdiArea_minimumSizeHint(self: pointer, ): pointer {.importc: "QMdiArea_minimumSizeHint".}
proc fcQMdiArea_currentSubWindow(self: pointer, ): pointer {.importc: "QMdiArea_currentSubWindow".}
proc fcQMdiArea_activeSubWindow(self: pointer, ): pointer {.importc: "QMdiArea_activeSubWindow".}
proc fcQMdiArea_subWindowList(self: pointer, ): struct_miqt_array {.importc: "QMdiArea_subWindowList".}
proc fcQMdiArea_addSubWindow(self: pointer, widget: pointer): pointer {.importc: "QMdiArea_addSubWindow".}
proc fcQMdiArea_removeSubWindow(self: pointer, widget: pointer): void {.importc: "QMdiArea_removeSubWindow".}
proc fcQMdiArea_background(self: pointer, ): pointer {.importc: "QMdiArea_background".}
proc fcQMdiArea_setBackground(self: pointer, background: pointer): void {.importc: "QMdiArea_setBackground".}
proc fcQMdiArea_activationOrder(self: pointer, ): cint {.importc: "QMdiArea_activationOrder".}
proc fcQMdiArea_setActivationOrder(self: pointer, order: cint): void {.importc: "QMdiArea_setActivationOrder".}
proc fcQMdiArea_setOption(self: pointer, option: cint): void {.importc: "QMdiArea_setOption".}
proc fcQMdiArea_testOption(self: pointer, opton: cint): bool {.importc: "QMdiArea_testOption".}
proc fcQMdiArea_setViewMode(self: pointer, mode: cint): void {.importc: "QMdiArea_setViewMode".}
proc fcQMdiArea_viewMode(self: pointer, ): cint {.importc: "QMdiArea_viewMode".}
proc fcQMdiArea_documentMode(self: pointer, ): bool {.importc: "QMdiArea_documentMode".}
proc fcQMdiArea_setDocumentMode(self: pointer, enabled: bool): void {.importc: "QMdiArea_setDocumentMode".}
proc fcQMdiArea_setTabsClosable(self: pointer, closable: bool): void {.importc: "QMdiArea_setTabsClosable".}
proc fcQMdiArea_tabsClosable(self: pointer, ): bool {.importc: "QMdiArea_tabsClosable".}
proc fcQMdiArea_setTabsMovable(self: pointer, movable: bool): void {.importc: "QMdiArea_setTabsMovable".}
proc fcQMdiArea_tabsMovable(self: pointer, ): bool {.importc: "QMdiArea_tabsMovable".}
proc fcQMdiArea_setTabShape(self: pointer, shape: cint): void {.importc: "QMdiArea_setTabShape".}
proc fcQMdiArea_tabShape(self: pointer, ): cint {.importc: "QMdiArea_tabShape".}
proc fcQMdiArea_setTabPosition(self: pointer, position: cint): void {.importc: "QMdiArea_setTabPosition".}
proc fcQMdiArea_tabPosition(self: pointer, ): cint {.importc: "QMdiArea_tabPosition".}
proc fcQMdiArea_subWindowActivated(self: pointer, param1: pointer): void {.importc: "QMdiArea_subWindowActivated".}
proc fcQMdiArea_connect_subWindowActivated(self: pointer, slot: int) {.importc: "QMdiArea_connect_subWindowActivated".}
proc fcQMdiArea_setActiveSubWindow(self: pointer, window: pointer): void {.importc: "QMdiArea_setActiveSubWindow".}
proc fcQMdiArea_tileSubWindows(self: pointer, ): void {.importc: "QMdiArea_tileSubWindows".}
proc fcQMdiArea_cascadeSubWindows(self: pointer, ): void {.importc: "QMdiArea_cascadeSubWindows".}
proc fcQMdiArea_closeActiveSubWindow(self: pointer, ): void {.importc: "QMdiArea_closeActiveSubWindow".}
proc fcQMdiArea_closeAllSubWindows(self: pointer, ): void {.importc: "QMdiArea_closeAllSubWindows".}
proc fcQMdiArea_activateNextSubWindow(self: pointer, ): void {.importc: "QMdiArea_activateNextSubWindow".}
proc fcQMdiArea_activatePreviousSubWindow(self: pointer, ): void {.importc: "QMdiArea_activatePreviousSubWindow".}
proc fcQMdiArea_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMdiArea_tr2".}
proc fcQMdiArea_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMdiArea_tr3".}
proc fcQMdiArea_subWindowList1(self: pointer, order: cint): struct_miqt_array {.importc: "QMdiArea_subWindowList1".}
proc fcQMdiArea_addSubWindow2(self: pointer, widget: pointer, flags: cint): pointer {.importc: "QMdiArea_addSubWindow2".}
proc fcQMdiArea_setOption2(self: pointer, option: cint, on: bool): void {.importc: "QMdiArea_setOption2".}
proc fQMdiArea_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QMdiArea_virtualbase_metaObject".}
proc fcQMdiArea_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_metaObject".}
proc fQMdiArea_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QMdiArea_virtualbase_metacast".}
proc fcQMdiArea_override_virtual_metacast(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_metacast".}
proc fQMdiArea_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMdiArea_virtualbase_metacall".}
proc fcQMdiArea_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_metacall".}
proc fQMdiArea_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QMdiArea_virtualbase_sizeHint".}
proc fcQMdiArea_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_sizeHint".}
proc fQMdiArea_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QMdiArea_virtualbase_minimumSizeHint".}
proc fcQMdiArea_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_minimumSizeHint".}
proc fQMdiArea_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QMdiArea_virtualbase_setupViewport".}
proc fcQMdiArea_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_setupViewport".}
proc fQMdiArea_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QMdiArea_virtualbase_event".}
proc fcQMdiArea_override_virtual_event(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_event".}
proc fQMdiArea_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QMdiArea_virtualbase_eventFilter".}
proc fcQMdiArea_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_eventFilter".}
proc fQMdiArea_virtualbase_paintEvent(self: pointer, paintEvent: pointer): void{.importc: "QMdiArea_virtualbase_paintEvent".}
proc fcQMdiArea_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_paintEvent".}
proc fQMdiArea_virtualbase_childEvent(self: pointer, childEvent: pointer): void{.importc: "QMdiArea_virtualbase_childEvent".}
proc fcQMdiArea_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_childEvent".}
proc fQMdiArea_virtualbase_resizeEvent(self: pointer, resizeEvent: pointer): void{.importc: "QMdiArea_virtualbase_resizeEvent".}
proc fcQMdiArea_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_resizeEvent".}
proc fQMdiArea_virtualbase_timerEvent(self: pointer, timerEvent: pointer): void{.importc: "QMdiArea_virtualbase_timerEvent".}
proc fcQMdiArea_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_timerEvent".}
proc fQMdiArea_virtualbase_showEvent(self: pointer, showEvent: pointer): void{.importc: "QMdiArea_virtualbase_showEvent".}
proc fcQMdiArea_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_showEvent".}
proc fQMdiArea_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QMdiArea_virtualbase_viewportEvent".}
proc fcQMdiArea_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_viewportEvent".}
proc fQMdiArea_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QMdiArea_virtualbase_scrollContentsBy".}
proc fcQMdiArea_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_scrollContentsBy".}
proc fQMdiArea_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_mousePressEvent".}
proc fcQMdiArea_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_mousePressEvent".}
proc fQMdiArea_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_mouseReleaseEvent".}
proc fcQMdiArea_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_mouseReleaseEvent".}
proc fQMdiArea_virtualbase_mouseDoubleClickEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_mouseDoubleClickEvent".}
proc fcQMdiArea_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_mouseDoubleClickEvent".}
proc fQMdiArea_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_mouseMoveEvent".}
proc fcQMdiArea_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_mouseMoveEvent".}
proc fQMdiArea_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_wheelEvent".}
proc fcQMdiArea_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_wheelEvent".}
proc fQMdiArea_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_contextMenuEvent".}
proc fcQMdiArea_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_contextMenuEvent".}
proc fQMdiArea_virtualbase_dragEnterEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_dragEnterEvent".}
proc fcQMdiArea_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_dragEnterEvent".}
proc fQMdiArea_virtualbase_dragMoveEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_dragMoveEvent".}
proc fcQMdiArea_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_dragMoveEvent".}
proc fQMdiArea_virtualbase_dragLeaveEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_dragLeaveEvent".}
proc fcQMdiArea_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_dragLeaveEvent".}
proc fQMdiArea_virtualbase_dropEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_dropEvent".}
proc fcQMdiArea_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_dropEvent".}
proc fQMdiArea_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_keyPressEvent".}
proc fcQMdiArea_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_keyPressEvent".}
proc fQMdiArea_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QMdiArea_virtualbase_viewportSizeHint".}
proc fcQMdiArea_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_viewportSizeHint".}
proc fQMdiArea_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QMdiArea_virtualbase_changeEvent".}
proc fcQMdiArea_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_changeEvent".}
proc fQMdiArea_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QMdiArea_virtualbase_initStyleOption".}
proc fcQMdiArea_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QMdiArea_override_virtual_initStyleOption".}
proc fQMdiArea_virtualbase_devType(self: pointer, ): cint{.importc: "QMdiArea_virtualbase_devType".}
